# cpp_cmake_template

./: .gitignore  CMakeLists.txt  README.md
app1/: CMakeLists.txt
app1/include/app1/: common.hpp
app1/src/: common.cpp  main.cpp
app1/test/bench/: CMakeLists.txt  sample_bench.cpp
app1/test/unit/: CMakeLists.txt  sample_test.cpp
cmake/: googletest.cmake  hayai.cmake
lib1/: CMakeLists.txt
lib1/include/lib1/: common.hpp
lib1/src/: common.cpp
lib1/test/: CMakeLists.txt
lib1/test/bench/: CMakeLists.txt  sample_bench.cpp
lib1/test/unit/: CMakeLists.txt  main.cpp  sample_test.cpp
